Commit homework 2 Сделано второе домашнее задание Signed-off-by: Smart97 <Smart9713@gmail.com>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<div class="header container">
+<header class="header container">
 
     <div class="logo">Bran<span class="pink">d</span></div>
 
@@ -24,17 +24,17 @@
     <button class="accountBtn">My Account <i class="fas fa-caret-down"></i></button>
 
 
-</div>
+</header>
 <div class="headerLine"></div>
-<div class="topNav">
+<nav class="topNav">
     <a href="#">Home</a>
     <a href="#">Man</a>
     <a href="#">Women</a>
     <a href="#">Kids</a>
-    <a href="#">Accoseriese</a>
+    <a href="#">Accessories</a>
     <a href="#">Featured</a>
     <a href="#">Hot Deals</a>
-    </div>
+</nav>
 
 <div class="topBanner">
     <div class="container topBannerContent">
@@ -84,62 +84,62 @@
     <h2>Featured items</h2>
     <h5>Shop for items based on what we featured in this week</h5>
     <div class="items">
-        <div class="item">
+        <article class="item">
             <div class="itemInfo"></div>
             <div class="itemText">
                 <p>Mango  People  T-shirt</p>
                 <p class="pink">$52.00</p>
             </div>
-        </div>
-         <div class="item">
+        </article>
+         <article class="item">
             <div class="itemInfo"></div>
             <div class="itemText">
                 <p>Mango  People  T-shirt</p>
                 <p class="pink">$52.00</p>
             </div>
-        </div>
-         <div class="item">
+        </article>
+         <article class="item">
             <div class="itemInfo"></div>
             <div class="itemText">
                 <p>Mango  People  T-shirt</p>
                 <p class="pink">$52.00</p>
             </div>
-        </div>
-        <div class="item">
+        </article>
+        <article class="item">
             <div class="itemInfo"></div>
             <div class="itemText">
                 <p>Mango  People  T-shirt</p>
                 <p class="pink">$52.00</p>
             </div>
-        </div>
-        <div class="item">
+        </article>
+        <article class="item">
             <div class="itemInfo"></div>
             <div class="itemText">
                 <p>Mango  People  T-shirt</p>
                 <p class="pink">$52.00</p>
             </div>
-        </div>
-        <div class="item">
+        </article>
+        <article class="item">
             <div class="itemInfo"></div>
             <div class="itemText">
                 <p>Mango  People  T-shirt</p>
                 <p class="pink">$52.00</p>
             </div>
-        </div>
-        <div class="item">
+        </article>
+        <article class="item">
             <div class="itemInfo"></div>
             <div class="itemText">
                 <p>Mango  People  T-shirt</p>
                 <p class="pink">$52.00</p>
             </div>
-        </div>
-        <div class="item">
+        </article>
+        <article class="item">
             <div class="itemInfo"></div>
             <div class="itemText">
                 <p>Mango  People  T-shirt</p>
                 <p class="pink">$52.00</p>
             </div>
-        </div>
+        </article>
     </div>
     <a href="#" class="featuredButton">Browse all products    <i class="fas fa-long-arrow-alt-right"></i></a>
 </div>
@@ -199,30 +199,30 @@
             quidem, quo vel.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, ullam.</p>
     </div>
-    <div class="info">
+    <nav class="info">
         <h5 class="pink">company</h5>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
-    </div>
-    <div class="info">
+    </nav>
+    <nav class="info">
         <h5 class="pink">information</h5>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
-    </div>
-    <div class="info">
+    </nav>
+    <nav class="info">
         <h5 class="pink">shop category</h5>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
-    </div>
+    </nav>
 
 </div>
 <footer>
