Commit homework 3 Частично Сделано третье домашнее задание Signed-off-by: Smart97 <Smart9713@gmail.com>

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <p class="textSmall">Lorem, bc</p>
                 <div class="reviewSlideButtons">
                     <a class="reviewSlideButton"></a>
-                    <a class="reviewSlideButton active"></a>
+                    <a class="reviewSlideButton actived"></a>
                     <a class="reviewSlideButton"></a>
                 </div>
             </div>
