--- a/Single Page.html
+++ b/Single Page.html
@@ -4,25 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/styles.css">
+<!--    <link rel="stylesheet" href="styles/style.css">-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/861689887d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<header class="header container">
+<header class="header container row mx-auto">
 
-    <div class="logo">Bran<span class="pink">d</span></div>
+    <div class="logo mr-5 col-3 col-lg-2 text-right">Bran<span class="pink">d</span></div>
 
-    <form class="search">
+    <form class="search col-12 order-last col-lg-5 order-lg-1 p-0">
         <div class="searchBrowse">Browse <i class="fas fa-caret-down"></i></div>
         <input name="search" type="text" placeholder="Search for Item...">
-        <button><i class="fas fa-search"></i></button>
+        <button class="ml-auto"><i class="fas fa-search"></i></button>
     </form>
+    <div class="account ml-auto order-2">
+        <img class="headerCart" src="img/cart.png" alt="headerCart">
+        <button class="accountBtn">My Account <i class="fas fa-caret-down"></i></button>
+    </div>
 
-    <img class="headerCart" src="img/cart.png" alt="headerCart">
-
-    <button class="accountBtn">My Account <i class="fas fa-caret-down"></i></button>
 
 
 </header>
@@ -56,7 +59,7 @@
     <div id="carouselExampleControls" class="carousel slide container-fluid" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/Slide.jpg" class="d-block w-35 mx-auto"  alt="...">
+                <img src="img/Slide.jpg" class="d-block w-35 mx-auto" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/Slide.jpg" class="d-block w-35 mx-auto" alt="...">
@@ -75,9 +78,11 @@
         </a>
     </div>
     <div class="itemDescription container position-relative d-row-flex justify-content-center ">
-        <h4 class="pink">women collection</h4>
-        <h3>Moschino cheap and chic</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, cumque enim incidunt officiis quia repellendus rerum voluptatem! Alias consequuntur dignissimos ea esse harum, ipsam laboriosam, numquam quod sint, tempore vel.</p>
+        <h4 class="pink text-uppercase">women collection</h4>
+        <h3 class="text-uppercase">Moschino cheap and chic</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, cumque enim incidunt officiis quia
+            repellendus rerum voluptatem! Alias consequuntur dignissimos ea esse harum, ipsam laboriosam, numquam quod
+            sint, tempore vel.</p>
         <div class="itemDetails col-8 d-flex justify-content-between">
             <p>material: cotton</p>
             <p>designer: binburghan</p>
@@ -115,31 +120,53 @@
                 </div>
             </div>
 
-            <button class="btn btn-outline-danger cartButton m-3 w-100">
-                Add to Cart
+            <button class="btn btn-outline-danger cartButton m-3 w-100 d-flex justify-content-center align-items-center">
+                <img class="mr-2 " src="img/cart.png" alt="headerCart">
+                <p class="m-0">Add to Cart</p>
             </button>
         </form>
-
-
-
-
+    </div>
+    <div class="goods container mt-5 mb-5">
+        <h3 class="text-center mb-4">YOU MAY LIKE ALSO</h3>
+        <div class="row">
+            <a class="col-6 col-lg-3" href="#">
+                <img src="img/good1.png" alt="good1">
+                <p>BLAZE LEGGINS</p>
+                <p class="pink">52$</p>
+            </a>
+            <a class="col-6 col-lg-3" href="#">
+                <img src="img/good1.png" alt="good1">
+                <p>BLAZE LEGGINS</p>
+                <p class="pink">52$</p>
+            </a>
+            <a class="col-6 col-lg-3" href="#">
+                <img src="img/good1.png" alt="good1">
+                <p>BLAZE LEGGINS</p>
+                <p class="pink">52$</p>
+            </a>
+            <a class="col-6 col-lg-3" href="#">
+                <img src="img/good1.png" alt="good1">
+                <p>BLAZE LEGGINS</p>
+                <p class="pink">52$</p>
+            </a>
+        </div>
     </div>
 </main>
 
 <div class="feedback">
     <div class="feedbackFilter">
-        <div class="container">
-            <div class="review">
+        <div class="container row mx-auto">
+            <div class="review text-center col-12 col-lg-6">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, voluptatibus</p>
                 <p class="pink">Lorem ipsum.</p>
                 <p class="textSmall">Lorem, bc</p>
-                <div class="reviewSlideButtons">
+                <div class="reviewSlideButtons mx-auto">
                     <a class="reviewSlideButton"></a>
                     <a class="reviewSlideButton active"></a>
                     <a class="reviewSlideButton"></a>
                 </div>
             </div>
-            <div class="subscribe">
+            <div class="subscribe col-12 col-lg-6">
                 <h3>subscribe</h3>
                 <p>Lorem ipsum dolor sit amet.</p>
                 <form>
@@ -151,15 +178,15 @@
 
     </div>
 </div>
-<div class="footerInfo container">
-    <div class="infoMain">
+<div class="footerInfo container row mx-auto">
+    <div class="infoMain col-12 col-lg-5">
         <div class="logo">Bran<span class="pink">d</span></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio dolor dolore, eligendi illum in
             inventore molestiae mollitia pariatur quasi sunt. Corporis deserunt expedita fugit minima nostrum quae
             quidem, quo vel.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, ullam.</p>
     </div>
-    <nav class="info">
+    <nav class="info col-4 col-lg-2 text-center">
         <h5 class="pink">company</h5>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
@@ -167,7 +194,7 @@
         <a href="#">Shop</a>
         <a href="#">Shop</a>
     </nav>
-    <nav class="info">
+    <nav class="info col-4 col-lg-2 text-center">
         <h5 class="pink">information</h5>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
@@ -175,7 +202,7 @@
         <a href="#">Shop</a>
         <a href="#">Shop</a>
     </nav>
-    <nav class="info">
+    <nav class="info col-4 col-lg-3 text-center">
         <h5 class="pink">shop category</h5>
         <a href="#">Shop</a>
         <a href="#">Shop</a>
@@ -186,8 +213,8 @@
 
 </div>
 <footer>
-    <div class="container">
-        <p>© 2017  Brand  All Rights Reserved.</p>
+    <div class="container ">
+        <p>© 2017 Brand All Rights Reserved.</p>
         <div class="socials">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -198,9 +225,15 @@
     </div>
 </footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 </body>
 
 
